--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,4 @@
 .gradle
-sundbox/build/
 
 # Ignore Gradle GUI config
 gradle-app.setting
@@ -13,3 +12,4 @@ gradle-app.setting
 # # Work around https://youtrack.jetbrains.com/issue/IDEA-116898
 # gradle/wrapper/gradle-wrapper.properties
 .idea/
+/sandbox/build/
