--- a/addressbook-web-tests/build.gradle
+++ b/addressbook-web-tests/build.gradle
@@ -8,3 +8,6 @@ dependencies{
     compile 'org.testng:testng:7.0.0'
     compile 'org.seleniumhq.selenium:selenium-java:3.141.59'
 }
+test {
+    useTestNG()
+}
