--- a/addressbook-web-tests/build.gradle
+++ b/addressbook-web-tests/build.gradle
@@ -10,6 +10,8 @@ dependencies{
     compile 'org.hamcrest:java-hamcrest:2.0.0.0'
     compile 'com.beust:jcommander:1.81'
     compile 'com.thoughtworks.xstream:xstream:1.4.16'
+    compile 'com.google.code.gson:gson:2.8.6'
+
 }
 test {
     useTestNG()
