--- a/addressbook-web-tests/build.gradle
+++ b/addressbook-web-tests/build.gradle
@@ -11,6 +11,7 @@ dependencies{
     compile 'com.beust:jcommander:1.81'
     compile 'com.thoughtworks.xstream:xstream:1.4.16'
     compile 'com.google.code.gson:gson:2.8.6'
+    compile 'ch.qos.logback:logback-classic:1.1.5'
 
 }
 task testGroups(type: Test){
