--- a/addressbook-web-tests/build.gradle
+++ b/addressbook-web-tests/build.gradle
@@ -12,6 +12,7 @@ dependencies{
     compile 'com.thoughtworks.xstream:xstream:1.4.16'
     compile 'com.google.code.gson:gson:2.8.6'
     compile 'ch.qos.logback:logback-classic:1.1.5'
+    compile 'mysql:mysql-connector-java:8.0.23'
 
 }
 task testGroups(type: Test){
