--- a/addressbook-web-tests/build.gradle
+++ b/addressbook-web-tests/build.gradle
@@ -13,6 +13,7 @@ dependencies{
     compile 'com.google.code.gson:gson:2.8.6'
     compile 'ch.qos.logback:logback-classic:1.1.5'
     compile 'mysql:mysql-connector-java:8.0.23'
+    compile 'org.hibernate:hibernate-core:5.4.22.Final'
 
 }
 task testGroups(type: Test){
