--- a/addressbook-web-tests/gradle/wrapper/gradle-wrapper.properties
+++ b/addressbook-web-tests/gradle/wrapper/gradle-wrapper.properties
@@ -1,6 +1,6 @@
-#Fri Nov 27 14:59:43 CET 2020
+#Mon Mar 22 15:13:26 CET 2021
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
 zipStoreBase=GRADLE_USER_HOME
 zipStorePath=wrapper/dists
-distributionUrl=https\://services.gradle.org/distributions/gradle-2.10-all.zip
+distributionUrl=https\://services.gradle.org/distributions/gradle-3.0-bin.zip
