--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,7 @@ gradle-app.setting
 
 # Avoid ignoring Gradle wrapper jar file (.jar files are usually ignored)
 !gradle-wrapper.jar
+out/
 .idea/
 /sandbox/build/
 *.log
